(ui/Workspace/CodeView/index) fix overflow

--- a/packages/app/src/ui/Workspace/CodeView/index.scss
+++ b/packages/app/src/ui/Workspace/CodeView/index.scss
@@ -51,6 +51,7 @@
 		z-index: 2;
 		background-color: var(--bg-c);
 		overflow: hidden;
+		flex-shrink: 0;
 
 		&.deleted {
 			--bg-c: var(--bg-diff-del);
